# hilbert-cuda-tv

./: .gitignore  CMakeLists.txt  README.md
data/: README.md
devdocs/: DEV_LOG.md
devdocs/cpu_reference/: cpu_reference.cpp
devdocs/verification/: verify_batch_stats.py  verify_lambda_fix.py  verify_metrics_math.py  verify_operator_norm.py  verify_rangecheck_math.py
include/core/: ColorGradientOp.cuh  DivergenceOp.cuh  GradientOp.cuh  HilbertOperator.cuh  VolumeGradientOp.cuh
include/distributed/: MultiGpuStub.cuh
include/solvers/: ColorROFSolver.cuh  ROFSolver.cuh  VolumeROFSolver.cuh
include/utils/: CudaCheck.cuh  ImageIO.h  Metrics.h  RangeCheck.h  VolumeIO.h
scripts/: build_windows.ps1  run_nsight_profile.ps1
src/: dummy.cu  main.cpp
src/core/: ColorGradientOp.cu  GradientOp.cu  VolumeGradientOp.cu
src/solvers/: ColorROFSolver.cu  ROFSolver.cu  VolumeROFSolver.cu
tests/: test_adjoint.cu  test_color_adjoint.cu  test_color_denoise.cu  test_denoise.cu  test_range_check.cpp  test_volume_adjoint.cu  test_volume_denoise.cu
tools/: compare_images.py  compare_volumes.py  hctv_metrics.py  preprocess_volume.py  test_compare_images.py  test_compare_volumes.py  test_hctv_metrics.py  test_preprocess_volume.py  visualize_volume.py
